2005-11-07  Kevin P. Fleming  <kpfleming@digium.com>

	* asterisk.c (main): setpriority() failure is not a reason to stop the process (issue #5581)

	* say.c (ast_say_date_with_format_da): say hours properly (issue #5576)

	* manager.c (astman_get_variables): restore old multiple-variable behavior for "Variable" header (issue #5585)

	* many files: don't check for NULL before calling ast_strlen_zero, it can do it itself (issue #5648)

	* pbx.c (handle_show_hints): use proper state-to-string function for hint state (issue #5583)

	* rtp.c: use unsigned format for debug packet output (issue #5595)

	* asterisk.c (main): force a dnsmgr background refresh after all other modules are initialized (issue #5599)
	* dnsmgr.c: add ability to start a background refresh on demand (issue #5599)

	* apps/app_dial.c (HANDLE_CAUSE): set CDR disposition to match cause code (issue #5602)

	* asterisk.c: support 'runuser' and 'rungroup' options in asterisk.conf (issue #5621)

	* res/Makefile, apps/Makefile, channels/Makefile, Makefile: support WITHOUT_ZAPTEL define to forcibly avoid building Zaptel support (issue #5634)

	* Makefile: various fixes (issue #5633)

	* apps/app_osplookup.c: upgrade to new arg/option API and implement priority jumping control

	* channels/chan_misdn.c: various fixes (issue #5639)
	* channels/misdn/isdn_lib.c: various fixes (issue #5639)

	* apps/app_playback.c: upgrade to new arg/option API and implement priority jumping control

	* apps/app_privacy.c: upgrade to new arg/option API and implement priority jumping control

	* apps/app_sendtext.c: upgrade to new arg/option API and implement priority jumping control

	* apps/app_transfer.c: upgrade to new arg/option API and implement priority jumping control

	* apps/app_txtcidname.c: upgrade to new arg/option API and implement priority jumping control

	* Makefile: restore function of 'dont-optimize'

	* config.c (config_text_file_load): don't generate log message when stat() fails
